--- a/css/styles.css
+++ b/css/styles.css
@@ -172,6 +172,11 @@ body{
 }
 
 .hero{
+    width: 1600px;
+    height: 600px;
+    margin-right: auto;
+    margin-left: auto;
+
     padding-top: 200px;
     padding-bottom: 200px;
     text-align: center;
@@ -179,7 +184,7 @@ body{
     background-color: var(--bg-main-dark-color);
     background-image:   linear-gradient(rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url(../images/index/bg_hero.jpg);
     background-repeat: no-repeat;
-    background-position: center;
+    
 }
 
 .main-title{
@@ -324,6 +329,7 @@ body{
 .member{
     background-color: var(--bg-card-color);
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .member-desc{
@@ -354,13 +360,18 @@ body{
     color: var(--muted-text-color);
 }
 
+.social-list-item {
+    display: block;
+    width: 44px;
+    height: 44px;
+}
 .social-list-link {
     display: flex;
     justify-content: center;
     align-items: center;
 
-    width: 44px;
-    height: 44px;
+    width: 100%;
+    height: 100%;
     border-radius: 50%;
     fill: var(--icon-color);
 }
@@ -409,7 +420,7 @@ body{
     background-color: var(--bg-main-dark-color);
 }
 
-.footer-cont > .logo {
+.address-container > .logo {
     display: block;
     margin-bottom: 20px;
 }
@@ -421,6 +432,7 @@ body{
 .address {
     font-style: normal;
 }
+
 
 .address-list-item:not(:last-child) {
     margin-bottom: 9px;
@@ -449,6 +461,35 @@ body{
 .contact:focus {
     color: var(--accent-color);
 }
+
+.join-us-container{
+    margin-top: 12px;
+    width: 206px;
+    height: 80px;
+}
+
+.join-us-text {
+    margin-bottom: 20px;
+
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+
+    color: var(--light-text-color);
+}
+
+.join-us-link {
+    background-color: rgba(255, 255, 255, 0.1);
+    fill: var(--bg-card-color);
+}
+
+.footer-cont {
+    display: flex;
+    gap: 70px;
+}
+
 
 .filter-list {
     display: flex;
@@ -486,6 +527,7 @@ body{
 .filter-btn:focus{
     color: var(--light-text-color);
     background-color: var(--accent-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .examples {
@@ -496,6 +538,10 @@ body{
 
 .example-item {
     flex-basis: calc((100% - 60px) / 3);
+}
+
+.example-item:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .project-item-wrapper{
